2004-07-26 14:38 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R to be
	a constant 1.25 for all elements. This value is similar to
	concrete. The G-S Ax=B linear elasticity solve appears more stable.

2004-07-26 14:06 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationSubIteration) now does
	Gauss-Seidel. The old Even-Odd was renamed to
	gridmoveElasticRelaxationEvenOdd.

2004-07-23 16:31 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R to be
	equal to 1/gridCellAspectRatio. This is the same as FUN3D
	gridmove.

2004-07-23 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) do not split an edge if it is
	near a cell with small aspect ratio to prevent really bad cells.

2004-07-23 13:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R to be
	a constant 1.0 for all elements. This value did the best at
	rotating an isotropic tet. Previously it was 1.0/volume which
	could be less than one for large tets.

2004-07-22 14:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmove*MPITest) made Initialize and Complete
	functions to test gridmove mpi load and set routines.
	* src/gridfortran.c (gridmove*mpitest_) made interfaces for
	initialize and complete gridmove routines.

2004-07-21 10:22 Mike Park  <mike.park@nasa.gov>

	* fixed bug reported by Alan Arslan compiling on IRIX64 with cc.
	* src/FAKEGeom.h added #include <time.h> to compile on IRIX64.
	* src/gridfiller.c added #ifdef HAVE_SDK to include FAKEGeom.h.

2004-07-16 16:45 Mike Park  <mike.park@nasa.gov>

	* Replaced obsolete SDK/Goolache/MeshMgr with SDK/UG_API methods.
	* src/Octree_Stub.c removed, goes away with SDK/Goolache/MeshMgr.

2004-07-16 15:10 Mike Park  <mike.park@nasa.gov>

	* Made 1.1.0 Release. SDK tagged DynLoader_MeshMgr_Used
	
2004-07-16 09:55 Mike Park  <mike.park@nasa.gov>
